public abstract class Media {
}
